--- a/package.json
+++ b/package.json
@@ -5,28 +5,26 @@
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
   "dependencies": {
-    "aedes": "0.51.2",
-    "body-parser": "^1.20.2",
+    "@homebridge/camera-utils": "^2.2.7-beta",
+    "aedes": "^0.51.3",
+    "body-parser": "^1.20.3",
     "chalk": "^5.3.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "debug": "^4.3.7",
-    "express": "^4.21.0",
-    "is-online": "^10.0.0",
+    "express": "^4.21.1",
+    "is-online": "^11.0.0",
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "mqtt": "^5.10.1",
-    "ring-client-api": "^13.1.0",
+    "ring-client-api": "13.2.0-beta.1",
     "rxjs": "^7.8.1",
-    "werift": "^0.20.0",
-    "write-file-atomic": "^5.0.1"
+    "werift": "^0.20.1",
+    "write-file-atomic": "^6.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "eslint": "^9.11.1",
-    "globals": "^15.9.0"
-  },
-  "overrides": {
-    "@eneris/push-receiver": "4.2.0"
+    "@eslint/js": "^9.13.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
