--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ring-mqtt",
-  "version": "5.8.0",
+  "version": "5.8.1",
   "type": "module",
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
@@ -8,17 +8,17 @@
     "@homebridge/camera-utils": "^2.2.7",
     "aedes": "^0.51.3",
     "body-parser": "^1.20.3",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "date-fns": "^4.1.0",
     "debug": "^4.4.0",
     "express": "^4.21.2",
     "is-online": "^11.0.0",
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
-    "mqtt": "^5.10.3",
-    "ring-client-api": "^13.2.1",
-    "rxjs": "^7.8.1",
-    "werift": "^0.20.1",
+    "mqtt": "^5.13.0",
+    "ring-client-api": "^14.0.0-beta.2",
+    "rxjs": "^7.8.2",
+    "werift": "^0.22.1",
     "write-file-atomic": "^6.0.0"
   },
   "devDependencies": {
